--- a/SusieSmith_Task2.ipynb
+++ b/SusieSmith_Task2.ipynb
@@ -43,7 +43,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -57,7 +57,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "de3458f6bfa12144f3145d56e6a1c0dba7ce73b2a3e9431fae113717018ff77d"
+   }
   }
  },
  "nbformat": 4,
